--- a/index.html
+++ b/index.html
@@ -1,149 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <title>Projektübersicht</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-            font-family: "Segoe UI", sans-serif;
-            background-color: #f4f7fa;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            background-color: #1e446d;
-            color: white;
-            padding: 1rem;
-            text-align: center;
-            font-size: 2rem;
-        }
-        .intro {
-            text-align: center;
-            padding: 2rem;
-        }
-        .intro h2 {
-            margin-bottom: 0.5rem;
-        }
-        .card-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 1.5rem;
-            padding: 2rem;
-        }
-        .card {
-            background: white;
-            border-radius: 12px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            padding: 1.5rem;
-            width: 300px;
-            text-align: center;
-        }
-        .card h3 {
-            color: #1e446d;
-        }
-        .card p {
-            font-size: 0.95rem;
-        }
-        .card a {
-            display: inline-block;
-            margin-top: 1rem;
-            padding: 0.6rem 1.2rem;
-            background-color: #1e446d;
-            color: white;
-            border-radius: 6px;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        .card a:hover {
-            background-color: #2d5b91;
-        }
-        footer {
-            text-align: center;
-            font-size: 0.8rem;
-            color: #777;
-            margin: 2rem 0;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Meine Projektseite</title>
 </head>
 <body>
-    <header>PROJEKTE</header>
-    <section class="intro">
-        <h2>Meine Projekte im Überblick</h2>
-        <p>Wählen Sie eine Kategorie oder laden Sie die zugehörige Projektübersicht als PDF herunter.</p>
-    </section>
-    <nav style="background-color:#1e446d; color:white; padding:0.8rem; text-align:center;">
-        <a href="https://sites.google.com/view/projekte2/startseite" style="color:white; margin: 0 10px;">Startseite</a>
-        <a href="https://sites.google.com/view/projekte2/energieaudits" style="color:white; margin: 0 10px;">Energieaudits</a>
-        <a href="https://sites.google.com/view/projekte2/energiemanagement" style="color:white; margin: 0 10px;">Energiemanagement</a>
-        <a href="https://sites.google.com/view/projekte2/nachhaltigkeitsmanagement" style="color:white; margin: 0 10px;">Nachhaltigkeit</a>
-        <a href="https://sites.google.com/view/projekte2/cbam" style="color:white; margin: 0 10px;">CBAM</a>
-        <a href="https://sites.google.com/view/projekte2/eu-ets-1" style="color:white; margin: 0 10px;">EU-ETS 1</a>
-        <a href="https://sites.google.com/view/projekte2/stromnev" style="color:white; margin: 0 10px;">StromNEV</a>
-        <a href="https://sites.google.com/view/projekte2/behg-eu-ets-2" style="color:white; margin: 0 10px;">BEHG & EU-ETS 2</a>
-        <a href="https://sites.google.com/view/projekte2/schuleuni" style="color:white; margin: 0 10px;">Schule/Uni</a>
-        <a href="https://sites.google.com/view/projekte2/weiteres" style="color:white; margin: 0 10px;">Weiteres</a>
-    </nav>
-
-    <section class="card-container">
-        <div class="card">
-            <h3>Energieaudits</h3>
-            <p>LED, Einsparpotenziale, Gebäudebewertung u. v. m.</p>
-            <a href="https://sites.google.com/view/projekte2/energieaudits">Zur Seite</a><br><br>
-            <a href="energieaudits.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>Energiemanagement</h3>
-            <p>ISO 50001, Zieldefinition, Monitoring, Audits u. v. m.</p>
-            <a href="https://sites.google.com/view/projekte2/energiemanagement">Zur Seite</a><br><br>
-            <a href="energiemanagement.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>Nachhaltigkeit</h3>
-            <p>GRI, CSRD, Lieferkette, ESG, CO₂-Bilanz etc.</p>
-            <a href="https://sites.google.com/view/projekte2/nachhaltigkeitsmanagement">Zur Seite</a><br><br>
-            <a href="nachhaltigkeit.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>CBAM</h3>
-            <p>Grenzausgleichssystem und Berichtspflichten</p>
-            <a href="https://sites.google.com/view/projekte2/cbam">Zur Seite</a><br><br>
-            <a href="cbam.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>EU-ETS 1</h3>
-            <p>Emissionshandelssystem der Industrie</p>
-            <a href="https://sites.google.com/view/projekte2/eu-ets-1">Zur Seite</a><br><br>
-            <a href="eu-ets-1.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>StromNEV</h3>
-            <p>Netzentgeltsysteme und Ausnahmen</p>
-            <a href="https://sites.google.com/view/projekte2/stromnev">Zur Seite</a><br><br>
-            <a href="stromnev.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>BEHG & EU-ETS 2</h3>
-            <p>Gebäudesektor, Verkehr & neue Emissionshandelspflichten</p>
-            <a href="https://sites.google.com/view/projekte2/behg-eu-ets-2">Zur Seite</a><br><br>
-            <a href="behg-eu-ets-2.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>Schule/Uni</h3>
-            <p>Wissenschaftliche Arbeiten, Vorträge, Projekte</p>
-            <a href="https://sites.google.com/view/projekte2/schuleuni">Zur Seite</a><br><br>
-            <a href="schuleuni.pdf">PDF Download</a>
-        </div>
-        <div class="card">
-            <h3>Weiteres</h3>
-            <p>Spezialthemen, Tools, freie Arbeiten</p>
-            <a href="https://sites.google.com/view/projekte2/weiteres">Zur Seite</a><br><br>
-            <a href="weiteres.pdf">PDF Download</a>
-        </div>
-    </section>
-    <footer>© 2025 Nasser Madjidian | Projektübersicht</footer>
+  <h1>Willkommen auf meiner Projektseite!</h1>
+  <p>Diese Seite wurde mit GitHub Pages erstellt.</p>
+  <a href="Projektseite_Milo.html">Zur Milo-Seite</a>
 </body>
 </html>
