--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meine Projektseite</title>
+  <title>Projektseite Madjidian</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      color: #333;
+    }
+    p {
+      color: #555;
+    }
+    a {
+      display: block;
+      margin-top: 20px;
+      color: #0066cc;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
   <h1>Willkommen auf meiner Projektseite!</h1>
   <p>Diese Seite wurde mit GitHub Pages erstellt.</p>
-  <a href="Projektseite_Milo.html">Zur Milo-Seite</a>
+  <a href="Projektseite_Milo.html">➡️ Zur Projektseite von Milo</a>
 </body>
 </html>
