--- a/index.html
+++ b/index.html
@@ -137,7 +137,8 @@
 
     <section class="intro">
         <h2>Meine Projekte im Überblick</h2>
-        <p>Wählen Sie eine Kategorie oder laden Sie die zugehörige Projektübersicht als PDF herunter.</p>
+        <p>Diese Seite bietet Ihnen einen systematischen Überblick über meine praxisorientierten Projekte aus den Bereichen Energie, 	Nachhaltigkeit und Klimapolitik. </p>
+	<p>Jedes Thema wird auf einer separaten Unterseite behandelt und kann zusätzlich als PDF heruntergeladen werden.</p>
     </section>
 
     <section class="card-container">
